Finishing up the API some

--- a/src/AppBundle/Resources/views/User/view-all-orders.html.twig
+++ b/src/AppBundle/Resources/views/User/view-all-orders.html.twig
@@ -51,7 +51,7 @@
                                         </td>
                                         <td style="padding-top: 20px;">
                                             <a class="btn btn-default btn-xs purple"
-                                               href="/app_dev.php/admin/group/A%20Auctor%20Non%20Associates/edit">
+                                               href="{{ path('view_past_order', {'order_id': item.id}) }}">
                                                 <i class="fa fa-book"></i> view
                                             </a>
                                         </td>
@@ -103,7 +103,7 @@
                                         </td>
                                         <td style="padding-top: 20px;">
                                             <a class="btn btn-default btn-xs purple"
-                                               href="/app_dev.php/admin/group/A%20Auctor%20Non%20Associates/edit">
+                                               href="{{ path('view_past_order', {'order_id': item.id}) }}">
                                                 <i class="fa fa-book"></i> view
                                             </a>
                                         </td>
