Finishing up the API some

--- a/src/AppBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/AppBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -5,6 +5,13 @@
 {% endblock page_title %}
 
 {% block page_name  %}
+    <style>
+        .page-content {
+            margin-top: 0px;
+            background-color: #eee;
+            border-radius: 0 0 0 4px;
+        }
+    </style>
     Change Password
 {% endblock page_name %}
 
