--- a/src/AppBundle/Resources/views/Profile/edit.html.twig
+++ b/src/AppBundle/Resources/views/Profile/edit.html.twig
@@ -6,6 +6,13 @@
 
 {% block page_name  %}
     Edit Information
+    <style>
+        .page-content {
+            margin-top: 0px;
+            background-color: #eee;
+            border-radius: 0 0 0 4px;
+        }
+    </style>
 {% endblock page_name %}
 
 {% block content %}
