Finishing up the API some

--- a/src/AppBundle/Resources/views/User/view-all-orders.html.twig
+++ b/src/AppBundle/Resources/views/User/view-all-orders.html.twig
@@ -45,7 +45,7 @@
                                 {% for item in submitted %}
                                     <tr>
                                         <td style="padding-top: 20px;">{{ item.id }}</td>
-                                        <td style="padding-top: 20px;">{{ item.date | date('m/d/Y') }}</td>
+                                        <td style="padding-top: 20px;">{{ item.submitDate | date('m/d/Y') }}</td>
                                         <td style="padding-top: 20px;">
                                             <span class="label label-sm label-info">Review Pending</span>
                                         </td>
@@ -97,7 +97,7 @@
                                 {% for item in approved %}
                                     <tr>
                                         <td style="padding-top: 20px;">{{ item.id }}</td>
-                                        <td style="padding-top: 20px;">{{ item.date | date('m/d/Y') }}</td>
+                                        <td style="padding-top: 20px;">{{ item.submitDate | date('m/d/Y') }}</td>
                                         <td style="padding-top: 20px;">
                                             <span class="label label-sm label-success">Order Approved</span>
                                         </td>
