Finishing up the API some

--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -1,7 +1,21 @@
 {% extends ":template:layout.html.twig" %}
 
+{% block title %}
+    Home
+{% endblock title %}
+
 {% block page_title  %}
-The Title
+    <style>
+        .page-bar {
+            display: none;
+        }
+
+        @media (min-width: 1200px) {
+            .container {
+                width: 970px !important;
+            }
+        }
+    </style>
 {% endblock page_title %}
 
 {% block page_name  %}
@@ -9,8 +23,244 @@ The Title
 {% endblock page_name %}
 
 {% block content %}
-    <div class="col-md-12">
-        Blank page content goes here
-    </div>
+    <div class="container" style="margin-left: 0px;">
+        <div class="row stats-overview-cont">
+            <div class="col-md-3">
+                <div class="stats-overview stat-block">
+                    <div class="display stat ok huge">
+							<span class="line-chart" style="display: inline;"><span style="display: none;"><span
+                                            style="display: none;"><span style="display: none;">
+							5, 6, 7, 11, 14, 10, 15, 19, 15, 2 </span><canvas width="50" height="20"></canvas></span><canvas
+                                            width="50" height="20"></canvas></span><canvas width="40"
+                                                                                           height="20"></canvas></span>
+                        <div class="percent">
+                            +66%
+                        </div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            Users
+                        </div>
+                        <div class="numbers">
+                            1360
+                        </div>
+                    </div>
+                    <div class="progress">
+							<span style="width: 40%;" class="progress-bar progress-bar-info" aria-valuenow="66"
+                                  aria-valuemin="0" aria-valuemax="100">
+							<span class="sr-only">
+							66% Complete </span>
+							</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="stats-overview stat-block">
+                    <div class="display stat good huge">
+							<span class="line-chart" style="display: inline;"><span style="display: none;"><span
+                                            style="display: none;"><span style="display: none;">
+							2,6,8,12, 11, 15, 16, 11, 16, 11, 10, 3, 7, 8, 12, 19 </span><canvas width="50"
+                                                                                                 height="20"></canvas></span><canvas
+                                            width="50" height="20"></canvas></span><canvas width="40"
+                                                                                           height="20"></canvas></span>
+                        <div class="percent">
+                            +16%
+                        </div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            Site Visits
+                        </div>
+                        <div class="numbers">
+                            1800
+                        </div>
+                        <div class="progress">
+								<span style="width: 16%;" class="progress-bar progress-bar-warning" aria-valuenow="16"
+                                      aria-valuemin="0" aria-valuemax="100">
+								<span class="sr-only">
+								16% Complete </span>
+								</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="stats-overview stat-block">
+                    <div class="display stat bad huge">
+							<span class="line-chart" style="display: inline;"><span style="display: none;"><span
+                                            style="display: none;"><span style="display: none;">
+							2,6,8,11, 14, 11, 12, 13, 15, 12, 9, 5, 11, 12, 15, 9,3 </span><canvas width="50"
+                                                                                                   height="20"></canvas></span><canvas
+                                            width="50" height="20"></canvas></span><canvas width="40"
+                                                                                           height="20"></canvas></span>
+                        <div class="percent">
+                            +6%
+                        </div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            Orders
+                        </div>
+                        <div class="numbers">
+                            509
+                        </div>
+                        <div class="progress">
+								<span style="width: 16%;" class="progress-bar progress-bar-success" aria-valuenow="16"
+                                      aria-valuemin="0" aria-valuemax="100">
+								<span class="sr-only">
+								16% Complete </span>
+								</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="stats-overview stat-block">
+                    <div class="display stat good huge">
+							<span class="bar-chart" style="display: inline;"><span style="display: none;"><span
+                                            style="display: none;"><span style="display: none;">
+							1,4,9,12, 10, 11, 12, 15, 12, 11, 9, 12, 15, 19, 14, 13, 15 </span><canvas width="50"
+                                                                                                       height="20"></canvas></span><canvas
+                                            width="50" height="20"></canvas></span><canvas width="40"
+                                                                                           height="20"></canvas></span>
+                        <div class="percent">
+                            +86%
+                        </div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            Revenue
+                        </div>
+                        <div class="numbers">
+                            1550
+                        </div>
+                        <div class="progress">
+								<span style="width: 56%;" class="progress-bar progress-bar-warning" aria-valuenow="56"
+                                      aria-valuemin="0" aria-valuemax="100">
+								<span class="sr-only">
+								56% Complete </span>
+								</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+
+        <hr>
+        <br>
+
+        <div class="row ">
+            <div class="col-md-12">
+                <div class="portlet">
+                    <div class="portlet-title">
+                        <div class="caption">
+                            <i class="fa fa-bell"></i>SUBMITTED ORDERS TO BE APPROVED
+                        </div>
+                    </div>
+                    <div class="portlet-body">
+                        <div class="table-scrollable">
+                            <table class="table table-striped table-bordered table-hover">
+                                {% if submitted %}
+                                    <thead>
+                                    <tr>
+                                        <th>
+                                            DATE SUBMITTED
+                                        </th>
+                                        <th>
+                                            OFFICE
+                                        </th>
+                                        <th>
+                                            SUBMITTED BY
+                                        </th>
+                                        <th>
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for item in submitted %}
+                                        <tr>
+                                            <td>
+                                                {{ item.submitDate | date('m/d/y   h:m A') }}
+                                            </td>
+                                            <td>
+                                                {{ item.office.name ? item.office.name : 'yo' }}
+                                            </td>
+                                            <td>
+                                                {{ item.user.firstName }} {{ item.user.lastName }}
+                                            </td>
+                                            <td style="width: 60px;">
+                                                <a href="#" class="btn btn-danger btn-xs">Approve</a>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                {% else %}
+                                    <div>
+                                        <h3>There are no submitted orders that need review right now.</h3>
+                                    </div>
+                                {% endif %}
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-md-12">
+                <div class="portlet">
+                    <div class="portlet-title">
+                        <div class="caption">
+                            <i class="fa fa-bell"></i>RECENTLY APPROVED
+                        </div>
+                    </div>
+                    <div class="portlet-body">
+                        <div class="table-scrollable">
+                            <table class="table table-striped table-bordered table-hover">
+                                {% if approved %}
+                                    <thead>
+                                    <tr>
+                                        <th>
+                                            DATE SUBMITTED
+                                        </th>
+                                        <th>
+                                            OFFICE
+                                        </th>
+                                        <th>
+                                            SUBMITTED BY
+                                        </th>
+                                        <th>
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for item in approved %}
+                                        <tr>
+                                            <td>
+                                                {{ item.submitDate | date('m/d/y   h:m A') }}
+                                            </td>
+                                            <td>
+                                                {{ item.office.name ? item.office.name : 'yo' }}
+                                            </td>
+                                            <td>
+                                                {{ item.user.firstName }} {{ item.user.lastName }}
+                                            </td>
+                                            <td style="width: 60px;">
+                                                <a href="#" class="btn btn-default btn-xs">View</a>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                {% else %}
+                                    <div>
+                                        <h3>There are no submitted orders that need review right now.</h3>
+                                    </div>
+                                {% endif %}
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+    </div>
 {% endblock content %}
